crates/unsoundness_checker/tests/snapshots/rules/mutable_generic_default/markdown_test__snippet_01.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: output
---
error[mutable-generic-default]: Using a mutable default argument for a generic parameter in a function can lead to runtime type errors.
 --> main.py:1:45
  |
1 | def append_and_return[T](x: T, y: list[T] = []) -> list[T]:
  |                                             ^^
2 |     y.append(x)
3 |     return y
  |
info: rule `mutable-generic-default` was selected in the configuration file
